# gamuboy-rs

./: Cargo.toml  LICENSE  README.md
src/: apu.rs  bus.rs  cartridge.rs  config.rs  cpu.rs  gameboy.rs  instr.rs  interrupts.rs  joypad.rs  joypad_events_handler.rs  lcd.rs  lib.rs  logger.rs  mbc.rs  memory.rs  mode.rs  oam.rs  ppu.rs  ram.rs  registers.rs  saver.rs  serial.rs  stereo.rs  timer.rs  vram.rs
tests/: test.rs
tests/roms/blargg/cpu_instrs/: 01-special.gb.expected.txt  02-interrupts.gb.expected.txt  03-op sp,hl.gb.expected.txt  04-op r,imm.gb.expected.txt  05-op rp.gb.expected.txt  06-ld r,r.gb.expected.txt  07-jr,jp,call,ret,rst.gb.expected.txt  08-misc instrs.gb.expected.txt  09-op r,r.gb.expected.txt  10-bit ops.gb.expected.txt  11-op a,(hl).gb.expected.txt
tests/roms/blargg/dmg_sound/: 01-registers.gb.expected.txt  02-len ctr.gb.expected.txt  03-trigger.gb.expected.txt  04-sweep.gb.expected.txt  05-sweep details.gb.expected.txt  06-overflow on trigger.gb.expected.txt  07-len sweep period sync.gb.expected.txt  08-len ctr during power.gb.expected.txt  09-wave read while on.gb.expected.txt  10-wave trigger while on.gb.expected.txt  11-regs after power.gb.expected.txt  12-wave write while on.gb.expected.txt
tests/roms/blargg/instr_timing/: instr_timing.gb.expected.txt
tests/roms/blargg/interrupt_time/: interrupt_time.gb.expected.txt
tests/roms/cgb-acid2/: cgb-acid2.gbc.expected.ppm
tests/roms/magen/: bg_oam_priority.gbc.expected.ppm  hblank_vram_dma.gbc.expected.ppm  oam_internal_priority.gbc.expected.ppm
(+4 files in other folders)
